--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# node modules
 
-# dependencies
 /node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
 
-# testing
-/coverage
+# dotenv variables
 
-# next.js
-/.next/
-/out/
+.env
 
-# production
-/build
+# next js
 
-# misc
-.DS_Store
-*.pem
+.next
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# tasks readme
 
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+tasks.md
