--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "portfolio",
+  "name": "baymax",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup": "node ./scripts/setup.js"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "@emailjs/browser": "^3.6.2",
+    "aos": "^2.3.4",
+    "dotenv": "^16.0.0",
+    "gradient-string": "^2.0.1",
+    "inquirer": "^8.2.4",
+    "next": "12.1.5",
+    "notyf": "^3.10.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.24"
   }
 }
